--- a/package.json
+++ b/package.json
@@ -57,7 +57,10 @@
     "cordova": {
         "plugins": {
             "cordova-sqlite-storage": {},
-            "cordova-plugin-camera": {},
+            "cordova-plugin-camera": {
+                "CAMERA_USAGE_DESCRIPTION": " ",
+                "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
+            },
             "cordova-plugin-file": {},
             "cordova-plugin-file-transfer": {},
             "cordova-plugin-filepath": {},
